# stock-viewer

./: .gitignore  README.md  requirements.txt
doc/: CONFIGURE.md  INSTALL.md  README.md  TESTING.md  UPLOAD.md
program/: README.md  setup.py
program/src/: base.stock-viewer.conf.json  filename.groups.json  filename.stocks.json  main.py  stock.py
program/stock_viewer/: base.stock-viewer.conf.json  categorize.py  filename.groups.json  filename.stocks.json  prog_editor.py  prog_viewer.py  stock.py
src/: README.md  filename.stocks.json  main.py  program_launcher.py  pyproject.toml  stock_viewer_launcher.py  toml_gen.py
src/stock_viewer/: about.py  desktop.py  prog_viewer.py  stock.py
src/stock_viewer/modules/: config.py  configure.py  stock.py  stock_old.py  stockb3.py  text_editor.py  wabout.py
