[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock_viewer"
version = "0.1.14"
description = "Simple stock viewer program."
readme = "README.md"
authors = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
maintainers = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only WITH Classpath-Exception-2.0 OR BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["writing", "translate"]
dependencies = [
    "PyQt5",
    "yfinance",
    "pyqtgraph"
]

[project.urls]
"Bug Reports" = "https://github.com/trucomanx/StockViewer/issues"
"Funding" = "https://trucomanx.github.io/en/funding.html"
"Documentation" = "https://github.com/trucomanx/StockViewer/tree/main/doc"
"Source" = "https://github.com/trucomanx/StockViewer"

[project.scripts]
"stock-viewer" = "stock_viewer.prog_viewer:main"

[tool.setuptools]
packages = ["stock_viewer", "stock_viewer.modules"]

[tool.setuptools.package-data]
"stock_viewer" = ["icons/logo.png"]
